CSS/style.css
/* ... */
.submit-button:hover {
  background: var(--primary-color);
  color: var(--light-background);
  border: var(--primary-color) 3px solid;
  transition: 400ms;
}

/* ICONS */

#icons-header {
  height: 100vh;
}

#icons-header::before {
  content: '';
  background: url(/static/IconsHeroImage_91kb_1191x795.jpg) center center/cover;
  opacity: 0.85;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

#hero-section {
  padding: 4rem;
  display: grid;
  grid-template-rows: 1fr 1fr 1fr;
  align-items: baseline;
  list-style: none;
  height: 75vh;
  background: linear-gradient(to top, rgba(2, 3, 8, 1), rgba(17, 17, 17, 0.01));
  /* background: royalblue;
  background-image: linear-gradient(to top, rgb(253, 253, 253, 1), rgba(253, 253, 253, 0.01)); */
  width: 100%;
}

.hero-title {
  grid-row: 1;
}

#hero-section ul {
  list-style: none;
  text-decoration: none;
  line-height: 3;
}

.hero-button-wrap {
  text-align: end;
}

#icons-view-more-option {
  display: flex;
  justify-content: flex-end;
  flex-direction: row;
  width: 100%;
  align-items: center;
  text-align: right;
  align-self: flex-end;
}

#icons-view-more-option a {
  color: var(--light-background);
  text-decoration: none;
  font-size: calc(.15vw + 1.4rem);
  margin-right: 1.5em;
}

.single-column {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 300px;
  justify-content: center;
  align-items:center;
  text-align:center;
}

.single-column h5 {
  padding-bottom: 6rem;
}

.single-column img {
  margin-bottom: 20rem;
}

#clean-design {
  padding: 4rem;
  margin-top: 20rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: top;
  margin-bottom: 10vh;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
}

#clean-design h2 {
  display: block;
  text-align: left;
}

#clean-design p {
  text-align: left;
  padding: 5rem 0rem;
  vertical-align: middle;
}

#clean-design img {
  max-width: 400px;
  max-height: 70vh;
  /* transform: skewY(50deg); */
  align-self: right;
}

.clean-design-image {
  text-align: center;
}

#clean-design img:hover {
  
  transform: perspective(400px) rotateY(5deg);
}

/* Lifetime Updates */

#lifetime-updates {
  margin: 0rem 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
}

#lifetime-updates {
  background-image: url(/static/CycleIcon950x900.png) center center/cover !important;
  opacity: 1;
  min-height: 300px;
  width: auto;
  margin-bottom: 20vh;
}

#lifetime-updates {
  display: grid;
  grid-template-areas: 
  'Lifetime-Updates-Headline Cycle-Icon'
  'Lifetime-Updates-Copy Cycle-Icon';
  grid-gap: 4rem;
}

#lifetime-updates h2 {
  grid-area: Lifetime-Updates-Headline;
}
#lifetime-updates p {
  grid-area: Lifetime-Updates-Copy;
}
#lifetime-updates img {
  grid-area: Cycle-Icon;
  max-width: 35vw;
  align-self: right;
  animation: cyclerotate 5s infinite 1s ease-in-out;
  /* transform: skewX(45deg); */
  opacity: .2;
}

@keyframes cyclerotate {
  to {
    transform: rotate(360deg);
  
  }
}

#lifetime-updates p {
  max-width: 45ch;
}

/* HQ Backgrounds */

#hq-backgrounds img {
  min-width: 200px;
  max-width: 80vw;
}

#hq-backgrounds h2, #hq-backgrounds p {
  padding: 4rem;
  max-width: 800px;
}

#hq-backgrounds {
  height: 100vh;
  width: 100vw;
}

/* UNLIMITED Customisation */

#unlimited-customisation p {
  padding: 4rem;
  max-width: 90vw;
}

.icons-overview-two-column {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 3rem;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.icons-overview-two-column img {
  max-width: 700px;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/* Purchase Options */

.purchase-options {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
  margin: 4rem;
  grid-gap: 3rem;
  /* text-align: center;
  align-items: center;
  justify-content: space-around; */
}

.icon-purchase-button-light {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  height: 300px;
  background: var(--light-background);
  color: var(--primary-color);
}

.icon-purchase-button-light a {
  text-decoration: none;
  color: var(--primary-color);
}

.icon-purchase-button-light:hover {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  height: 300px;
  color: var(--light-background);
  background: var(--primary-color);
  border: var(--light-background) solid 4px;
}

.icon-purchase-button-dark a {
  text-decoration: none;
  color: var(--light-background);
}

.icon-purchase-button-dark {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  height: 300px;
  color: var(--light-background);
  background: var(--primary-color);
  border: var(--light-background) solid 4px;
}

.icon-purchase-button-dark:hover {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  height: 300px;
  color: var(--primary-color);
  background: var(--light-background);
}

.purchase-options-disclaimer{
  width: 100vw;
  text-align: center;
  height: 5vh;
  color: var(--light-background);
}


/* HAMBURGER MENU */

.mobile-menu-wrap {
  display: none;
  top: 0;
  right: 0;
  z-index: 1;
}

.mobile-menu-wrap .toggler {
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 2;
  cursor: pointer;
  width: 50px;
  height: 50px;
  opacity: 0;
}

.mobile-menu-wrap .hamburger {
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 1;
  width: 60px;
  height: 60px;
  padding: 1rem;
  background: none;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
/* ... */

